[OVT-2339] xslt-implementation